Preparing 3.1.3 release