@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for AD_Column_Access
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_AD_Column_Access extends PO
 {
 /** Standard Constructor
@@ -56,12 +56,12 @@ public X_AD_Column_Access (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=571 */
-public static final int Table_ID=571;
+public static final int Table_ID=MTable.getTable_ID("AD_Column_Access");
 
 /** TableName=AD_Column_Access */
 public static final String Table_Name="AD_Column_Access";
 
-protected static KeyNamePair Model = new KeyNamePair(571,"AD_Column_Access");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"AD_Column_Access");
 
 protected BigDecimal accessLevel = new BigDecimal(6);
 /** AccessLevel
@@ -93,7 +93,7 @@ return sb.toString();
 public void setAD_Column_ID (int AD_Column_ID)
 {
 if (AD_Column_ID < 1) throw new IllegalArgumentException ("AD_Column_ID is mandatory.");
-set_ValueNoCheck ("AD_Column_ID", new Integer(AD_Column_ID));
+set_ValueNoCheck ("AD_Column_ID", Integer.valueOf(AD_Column_ID));
 }
 /** Get Column.
 @return Column in the table */
@@ -114,7 +114,7 @@ return new KeyNamePair(get_ID(), String.valueOf(getAD_Column_ID()));
 public void setAD_Role_ID (int AD_Role_ID)
 {
 if (AD_Role_ID < 0) throw new IllegalArgumentException ("AD_Role_ID is mandatory.");
-set_ValueNoCheck ("AD_Role_ID", new Integer(AD_Role_ID));
+set_ValueNoCheck ("AD_Role_ID", Integer.valueOf(AD_Role_ID));
 }
 /** Get Role.
 @return Responsibility Role */
@@ -130,7 +130,7 @@ public void setAD_Table_ID (int AD_Table_ID)
 {
 if (AD_Table_ID <= 0) set_Value ("AD_Table_ID", null);
  else 
-set_Value ("AD_Table_ID", new Integer(AD_Table_ID));
+set_Value ("AD_Table_ID", Integer.valueOf(AD_Table_ID));
 }
 /** Get Table.
 @return Database Table information */
@@ -144,7 +144,7 @@ return ii.intValue();
 @param IsExclude Exclude access to the data - if not selected Include access to the data */
 public void setIsExclude (boolean IsExclude)
 {
-set_Value ("IsExclude", new Boolean(IsExclude));
+set_Value ("IsExclude", Boolean.valueOf(IsExclude));
 }
 /** Get Exclude.
 @return Exclude access to the data - if not selected Include access to the data */
@@ -162,7 +162,7 @@ return false;
 @param IsReadOnly Field is read only */
 public void setIsReadOnly (boolean IsReadOnly)
 {
-set_Value ("IsReadOnly", new Boolean(IsReadOnly));
+set_Value ("IsReadOnly", Boolean.valueOf(IsReadOnly));
 }
 /** Get Read Only.
 @return Field is read only */
