@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for AD_Error
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_AD_Error extends PO
 {
 /** Standard Constructor
@@ -54,12 +54,12 @@ public X_AD_Error (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=380 */
-public static final int Table_ID=380;
+public static final int Table_ID=MTable.getTable_ID("AD_Error");
 
 /** TableName=AD_Error */
 public static final String Table_Name="AD_Error";
 
-protected static KeyNamePair Model = new KeyNamePair(380,"AD_Error");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"AD_Error");
 
 protected BigDecimal accessLevel = new BigDecimal(6);
 /** AccessLevel
@@ -91,7 +91,7 @@ return sb.toString();
 public void setAD_Error_ID (int AD_Error_ID)
 {
 if (AD_Error_ID < 1) throw new IllegalArgumentException ("AD_Error_ID is mandatory.");
-set_ValueNoCheck ("AD_Error_ID", new Integer(AD_Error_ID));
+set_ValueNoCheck ("AD_Error_ID", Integer.valueOf(AD_Error_ID));
 }
 /** Get Error.
 @return Error */
