@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for AD_WF_Block
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_AD_WF_Block extends PO
 {
 /** Standard Constructor
@@ -55,12 +55,12 @@ public X_AD_WF_Block (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=647 */
-public static final int Table_ID=647;
+public static final int Table_ID=MTable.getTable_ID("AD_WF_Block");
 
 /** TableName=AD_WF_Block */
 public static final String Table_Name="AD_WF_Block";
 
-protected static KeyNamePair Model = new KeyNamePair(647,"AD_WF_Block");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"AD_WF_Block");
 
 protected BigDecimal accessLevel = new BigDecimal(6);
 /** AccessLevel
@@ -92,7 +92,7 @@ return sb.toString();
 public void setAD_WF_Block_ID (int AD_WF_Block_ID)
 {
 if (AD_WF_Block_ID < 1) throw new IllegalArgumentException ("AD_WF_Block_ID is mandatory.");
-set_ValueNoCheck ("AD_WF_Block_ID", new Integer(AD_WF_Block_ID));
+set_ValueNoCheck ("AD_WF_Block_ID", Integer.valueOf(AD_WF_Block_ID));
 }
 /** Get Workflow Block.
 @return Workflow Transaction Execution Block */
@@ -107,7 +107,7 @@ return ii.intValue();
 public void setAD_Workflow_ID (int AD_Workflow_ID)
 {
 if (AD_Workflow_ID < 1) throw new IllegalArgumentException ("AD_Workflow_ID is mandatory.");
-set_ValueNoCheck ("AD_Workflow_ID", new Integer(AD_Workflow_ID));
+set_ValueNoCheck ("AD_Workflow_ID", Integer.valueOf(AD_Workflow_ID));
 }
 /** Get Workflow.
 @return Workflow or combination of tasks */
