@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for AD_WF_Process
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_AD_WF_Process extends PO
 {
 /** Standard Constructor
@@ -59,12 +59,12 @@ public X_AD_WF_Process (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=645 */
-public static final int Table_ID=645;
+public static final int Table_ID=MTable.getTable_ID("AD_WF_Process");
 
 /** TableName=AD_WF_Process */
 public static final String Table_Name="AD_WF_Process";
 
-protected static KeyNamePair Model = new KeyNamePair(645,"AD_WF_Process");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"AD_WF_Process");
 
 protected BigDecimal accessLevel = new BigDecimal(7);
 /** AccessLevel
@@ -97,7 +97,7 @@ public void setAD_Message_ID (int AD_Message_ID)
 {
 if (AD_Message_ID <= 0) set_Value ("AD_Message_ID", null);
  else 
-set_Value ("AD_Message_ID", new Integer(AD_Message_ID));
+set_Value ("AD_Message_ID", Integer.valueOf(AD_Message_ID));
 }
 /** Get Message.
 @return System Message */
@@ -112,7 +112,7 @@ return ii.intValue();
 public void setAD_Table_ID (int AD_Table_ID)
 {
 if (AD_Table_ID < 1) throw new IllegalArgumentException ("AD_Table_ID is mandatory.");
-set_Value ("AD_Table_ID", new Integer(AD_Table_ID));
+set_Value ("AD_Table_ID", Integer.valueOf(AD_Table_ID));
 }
 /** Get Table.
 @return Database Table information */
@@ -131,7 +131,7 @@ public void setAD_User_ID (int AD_User_ID)
 {
 if (AD_User_ID <= 0) set_Value ("AD_User_ID", null);
  else 
-set_Value ("AD_User_ID", new Integer(AD_User_ID));
+set_Value ("AD_User_ID", Integer.valueOf(AD_User_ID));
 }
 /** Get User/Contact.
 @return User within the system - Internal or Business Partner Contact */
@@ -146,7 +146,7 @@ return ii.intValue();
 public void setAD_WF_Process_ID (int AD_WF_Process_ID)
 {
 if (AD_WF_Process_ID < 1) throw new IllegalArgumentException ("AD_WF_Process_ID is mandatory.");
-set_ValueNoCheck ("AD_WF_Process_ID", new Integer(AD_WF_Process_ID));
+set_ValueNoCheck ("AD_WF_Process_ID", Integer.valueOf(AD_WF_Process_ID));
 }
 /** Get Workflow Process.
 @return Actual Workflow Process Instance */
@@ -161,7 +161,7 @@ return ii.intValue();
 public void setAD_WF_Responsible_ID (int AD_WF_Responsible_ID)
 {
 if (AD_WF_Responsible_ID < 1) throw new IllegalArgumentException ("AD_WF_Responsible_ID is mandatory.");
-set_Value ("AD_WF_Responsible_ID", new Integer(AD_WF_Responsible_ID));
+set_Value ("AD_WF_Responsible_ID", Integer.valueOf(AD_WF_Responsible_ID));
 }
 /** Get Workflow Responsible.
 @return Responsible for Workflow Execution */
@@ -176,7 +176,7 @@ return ii.intValue();
 public void setAD_Workflow_ID (int AD_Workflow_ID)
 {
 if (AD_Workflow_ID < 1) throw new IllegalArgumentException ("AD_Workflow_ID is mandatory.");
-set_Value ("AD_Workflow_ID", new Integer(AD_Workflow_ID));
+set_Value ("AD_Workflow_ID", Integer.valueOf(AD_Workflow_ID));
 }
 /** Get Workflow.
 @return Workflow or combination of tasks */
@@ -196,7 +196,7 @@ return new KeyNamePair(get_ID(), String.valueOf(getAD_Workflow_ID()));
 @param Priority Indicates if this request is of a high, medium or low priority. */
 public void setPriority (int Priority)
 {
-set_Value ("Priority", new Integer(Priority));
+set_Value ("Priority", Integer.valueOf(Priority));
 }
 /** Get Priority.
 @return Indicates if this request is of a high, medium or low priority. */
@@ -210,7 +210,7 @@ return ii.intValue();
 @param Processed The document has been processed */
 public void setProcessed (boolean Processed)
 {
-set_Value ("Processed", new Boolean(Processed));
+set_Value ("Processed", Boolean.valueOf(Processed));
 }
 /** Get Processed.
 @return The document has been processed */
@@ -228,7 +228,7 @@ return false;
 @param Processing Process Now */
 public void setProcessing (boolean Processing)
 {
-set_Value ("Processing", new Boolean(Processing));
+set_Value ("Processing", Boolean.valueOf(Processing));
 }
 /** Get Process Now.
 @return Process Now */
@@ -247,7 +247,7 @@ return false;
 public void setRecord_ID (int Record_ID)
 {
 if (Record_ID < 0) throw new IllegalArgumentException ("Record_ID is mandatory.");
-set_Value ("Record_ID", new Integer(Record_ID));
+set_Value ("Record_ID", Integer.valueOf(Record_ID));
 }
 /** Get Record ID.
 @return Direct internal record ID */
