@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for B_Offer
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_B_Offer extends PO
 {
 /** Standard Constructor
@@ -58,12 +58,12 @@ public X_B_Offer (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=682 */
-public static final int Table_ID=682;
+public static final int Table_ID=MTable.getTable_ID("B_Offer");
 
 /** TableName=B_Offer */
 public static final String Table_Name="B_Offer";
 
-protected static KeyNamePair Model = new KeyNamePair(682,"B_Offer");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"B_Offer");
 
 protected BigDecimal accessLevel = new BigDecimal(3);
 /** AccessLevel
@@ -95,7 +95,7 @@ return sb.toString();
 public void setAD_User_ID (int AD_User_ID)
 {
 if (AD_User_ID < 1) throw new IllegalArgumentException ("AD_User_ID is mandatory.");
-set_Value ("AD_User_ID", new Integer(AD_User_ID));
+set_Value ("AD_User_ID", Integer.valueOf(AD_User_ID));
 }
 /** Get User/Contact.
 @return User within the system - Internal or Business Partner Contact */
@@ -110,7 +110,7 @@ return ii.intValue();
 public void setB_Offer_ID (int B_Offer_ID)
 {
 if (B_Offer_ID < 1) throw new IllegalArgumentException ("B_Offer_ID is mandatory.");
-set_ValueNoCheck ("B_Offer_ID", new Integer(B_Offer_ID));
+set_ValueNoCheck ("B_Offer_ID", Integer.valueOf(B_Offer_ID));
 }
 /** Get Offer.
 @return Offer for a Topic */
@@ -125,7 +125,7 @@ return ii.intValue();
 public void setB_SellerFunds_ID (int B_SellerFunds_ID)
 {
 if (B_SellerFunds_ID < 1) throw new IllegalArgumentException ("B_SellerFunds_ID is mandatory.");
-set_Value ("B_SellerFunds_ID", new Integer(B_SellerFunds_ID));
+set_Value ("B_SellerFunds_ID", Integer.valueOf(B_SellerFunds_ID));
 }
 /** Get Seller Funds.
 @return Seller Funds from Offers on Topics */
@@ -140,7 +140,7 @@ return ii.intValue();
 public void setB_Topic_ID (int B_Topic_ID)
 {
 if (B_Topic_ID < 1) throw new IllegalArgumentException ("B_Topic_ID is mandatory.");
-set_Value ("B_Topic_ID", new Integer(B_Topic_ID));
+set_Value ("B_Topic_ID", Integer.valueOf(B_Topic_ID));
 }
 /** Get Topic.
 @return Auction Topic */
@@ -154,7 +154,7 @@ return ii.intValue();
 @param IsWillingToCommit Willing to commit */
 public void setIsWillingToCommit (boolean IsWillingToCommit)
 {
-set_Value ("IsWillingToCommit", new Boolean(IsWillingToCommit));
+set_Value ("IsWillingToCommit", Boolean.valueOf(IsWillingToCommit));
 }
 /** Get Willing to commit.
 @return Willing to commit */
