@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for C_POSKeyLayout
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_C_POSKeyLayout extends PO
 {
 /** Standard Constructor
@@ -54,12 +54,12 @@ public X_C_POSKeyLayout (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=749 */
-public static final int Table_ID=749;
+public static final int Table_ID=MTable.getTable_ID("C_POSKeyLayout");
 
 /** TableName=C_POSKeyLayout */
 public static final String Table_Name="C_POSKeyLayout";
 
-protected static KeyNamePair Model = new KeyNamePair(749,"C_POSKeyLayout");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"C_POSKeyLayout");
 
 protected BigDecimal accessLevel = new BigDecimal(2);
 /** AccessLevel
@@ -91,7 +91,7 @@ return sb.toString();
 public void setC_POSKeyLayout_ID (int C_POSKeyLayout_ID)
 {
 if (C_POSKeyLayout_ID < 1) throw new IllegalArgumentException ("C_POSKeyLayout_ID is mandatory.");
-set_ValueNoCheck ("C_POSKeyLayout_ID", new Integer(C_POSKeyLayout_ID));
+set_ValueNoCheck ("C_POSKeyLayout_ID", Integer.valueOf(C_POSKeyLayout_ID));
 }
 /** Get POS Key Layout.
 @return POS Function Key Layout */
