@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for C_Recurring_Run
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_C_Recurring_Run extends PO
 {
 /** Standard Constructor
@@ -54,12 +54,12 @@ public X_C_Recurring_Run (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=573 */
-public static final int Table_ID=573;
+public static final int Table_ID=MTable.getTable_ID("C_Recurring_Run");
 
 /** TableName=C_Recurring_Run */
 public static final String Table_Name="C_Recurring_Run";
 
-protected static KeyNamePair Model = new KeyNamePair(573,"C_Recurring_Run");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"C_Recurring_Run");
 
 protected BigDecimal accessLevel = new BigDecimal(3);
 /** AccessLevel
@@ -92,7 +92,7 @@ public void setC_Invoice_ID (int C_Invoice_ID)
 {
 if (C_Invoice_ID <= 0) set_ValueNoCheck ("C_Invoice_ID", null);
  else 
-set_ValueNoCheck ("C_Invoice_ID", new Integer(C_Invoice_ID));
+set_ValueNoCheck ("C_Invoice_ID", Integer.valueOf(C_Invoice_ID));
 }
 /** Get Invoice.
 @return Invoice Identifier */
@@ -108,7 +108,7 @@ public void setC_Order_ID (int C_Order_ID)
 {
 if (C_Order_ID <= 0) set_ValueNoCheck ("C_Order_ID", null);
  else 
-set_ValueNoCheck ("C_Order_ID", new Integer(C_Order_ID));
+set_ValueNoCheck ("C_Order_ID", Integer.valueOf(C_Order_ID));
 }
 /** Get Order.
 @return Order */
@@ -124,7 +124,7 @@ public void setC_Payment_ID (int C_Payment_ID)
 {
 if (C_Payment_ID <= 0) set_ValueNoCheck ("C_Payment_ID", null);
  else 
-set_ValueNoCheck ("C_Payment_ID", new Integer(C_Payment_ID));
+set_ValueNoCheck ("C_Payment_ID", Integer.valueOf(C_Payment_ID));
 }
 /** Get Payment.
 @return Payment identifier */
@@ -140,7 +140,7 @@ public void setC_Project_ID (int C_Project_ID)
 {
 if (C_Project_ID <= 0) set_ValueNoCheck ("C_Project_ID", null);
  else 
-set_ValueNoCheck ("C_Project_ID", new Integer(C_Project_ID));
+set_ValueNoCheck ("C_Project_ID", Integer.valueOf(C_Project_ID));
 }
 /** Get Project.
 @return Financial Project */
@@ -155,7 +155,7 @@ return ii.intValue();
 public void setC_Recurring_ID (int C_Recurring_ID)
 {
 if (C_Recurring_ID < 1) throw new IllegalArgumentException ("C_Recurring_ID is mandatory.");
-set_ValueNoCheck ("C_Recurring_ID", new Integer(C_Recurring_ID));
+set_ValueNoCheck ("C_Recurring_ID", Integer.valueOf(C_Recurring_ID));
 }
 /** Get Recurring.
 @return Recurring Document */
@@ -170,7 +170,7 @@ return ii.intValue();
 public void setC_Recurring_Run_ID (int C_Recurring_Run_ID)
 {
 if (C_Recurring_Run_ID < 1) throw new IllegalArgumentException ("C_Recurring_Run_ID is mandatory.");
-set_ValueNoCheck ("C_Recurring_Run_ID", new Integer(C_Recurring_Run_ID));
+set_ValueNoCheck ("C_Recurring_Run_ID", Integer.valueOf(C_Recurring_Run_ID));
 }
 /** Get Recurring Run.
 @return Recurring Document Run */
@@ -198,7 +198,7 @@ public void setGL_JournalBatch_ID (int GL_JournalBatch_ID)
 {
 if (GL_JournalBatch_ID <= 0) set_ValueNoCheck ("GL_JournalBatch_ID", null);
  else 
-set_ValueNoCheck ("GL_JournalBatch_ID", new Integer(GL_JournalBatch_ID));
+set_ValueNoCheck ("GL_JournalBatch_ID", Integer.valueOf(GL_JournalBatch_ID));
 }
 /** Get Journal Batch.
 @return General Ledger Journal Batch */
