@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for C_ServiceLevel
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_C_ServiceLevel extends PO
 {
 /** Standard Constructor
@@ -57,12 +57,12 @@ public X_C_ServiceLevel (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=337 */
-public static final int Table_ID=337;
+public static final int Table_ID=MTable.getTable_ID("C_ServiceLevel");
 
 /** TableName=C_ServiceLevel */
 public static final String Table_Name="C_ServiceLevel";
 
-protected static KeyNamePair Model = new KeyNamePair(337,"C_ServiceLevel");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"C_ServiceLevel");
 
 protected BigDecimal accessLevel = new BigDecimal(1);
 /** AccessLevel
@@ -94,7 +94,7 @@ return sb.toString();
 public void setC_RevenueRecognition_Plan_ID (int C_RevenueRecognition_Plan_ID)
 {
 if (C_RevenueRecognition_Plan_ID < 1) throw new IllegalArgumentException ("C_RevenueRecognition_Plan_ID is mandatory.");
-set_ValueNoCheck ("C_RevenueRecognition_Plan_ID", new Integer(C_RevenueRecognition_Plan_ID));
+set_ValueNoCheck ("C_RevenueRecognition_Plan_ID", Integer.valueOf(C_RevenueRecognition_Plan_ID));
 }
 /** Get Revenue Recognition Plan.
 @return Plan for recognizing or recording revenue */
@@ -109,7 +109,7 @@ return ii.intValue();
 public void setC_ServiceLevel_ID (int C_ServiceLevel_ID)
 {
 if (C_ServiceLevel_ID < 1) throw new IllegalArgumentException ("C_ServiceLevel_ID is mandatory.");
-set_ValueNoCheck ("C_ServiceLevel_ID", new Integer(C_ServiceLevel_ID));
+set_ValueNoCheck ("C_ServiceLevel_ID", Integer.valueOf(C_ServiceLevel_ID));
 }
 /** Get Service Level.
 @return Product Revenue Recognition Service Level  */
@@ -147,7 +147,7 @@ return new KeyNamePair(get_ID(), getDescription());
 public void setM_Product_ID (int M_Product_ID)
 {
 if (M_Product_ID < 1) throw new IllegalArgumentException ("M_Product_ID is mandatory.");
-set_ValueNoCheck ("M_Product_ID", new Integer(M_Product_ID));
+set_ValueNoCheck ("M_Product_ID", Integer.valueOf(M_Product_ID));
 }
 /** Get Product.
 @return Product, Service, Item */
@@ -161,7 +161,7 @@ return ii.intValue();
 @param Processed The document has been processed */
 public void setProcessed (boolean Processed)
 {
-set_Value ("Processed", new Boolean(Processed));
+set_Value ("Processed", Boolean.valueOf(Processed));
 }
 /** Get Processed.
 @return The document has been processed */
@@ -179,7 +179,7 @@ return false;
 @param Processing Process Now */
 public void setProcessing (boolean Processing)
 {
-set_Value ("Processing", new Boolean(Processing));
+set_Value ("Processing", Boolean.valueOf(Processing));
 }
 /** Get Process Now.
 @return Process Now */
