@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for GL_Budget
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_GL_Budget extends PO
 {
 /** Standard Constructor
@@ -55,12 +55,12 @@ public X_GL_Budget (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=271 */
-public static final int Table_ID=271;
+public static final int Table_ID=MTable.getTable_ID("GL_Budget");
 
 /** TableName=GL_Budget */
 public static final String Table_Name="GL_Budget";
 
-protected static KeyNamePair Model = new KeyNamePair(271,"GL_Budget");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"GL_Budget");
 
 protected BigDecimal accessLevel = new BigDecimal(3);
 /** AccessLevel
@@ -135,7 +135,7 @@ return (String)get_Value("Description");
 public void setGL_Budget_ID (int GL_Budget_ID)
 {
 if (GL_Budget_ID < 1) throw new IllegalArgumentException ("GL_Budget_ID is mandatory.");
-set_ValueNoCheck ("GL_Budget_ID", new Integer(GL_Budget_ID));
+set_ValueNoCheck ("GL_Budget_ID", Integer.valueOf(GL_Budget_ID));
 }
 /** Get Budget.
 @return General Ledger Budget */
@@ -149,7 +149,7 @@ return ii.intValue();
 @param IsPrimary Indicates if this is the primary budget */
 public void setIsPrimary (boolean IsPrimary)
 {
-set_Value ("IsPrimary", new Boolean(IsPrimary));
+set_Value ("IsPrimary", Boolean.valueOf(IsPrimary));
 }
 /** Get Primary.
 @return Indicates if this is the primary budget */
