@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for I_BankStatement
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_I_BankStatement extends PO
 {
 /** Standard Constructor
@@ -54,12 +54,12 @@ public X_I_BankStatement (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=600 */
-public static final int Table_ID=600;
+public static final int Table_ID=MTable.getTable_ID("I_BankStatement");
 
 /** TableName=I_BankStatement */
 public static final String Table_Name="I_BankStatement";
 
-protected static KeyNamePair Model = new KeyNamePair(600,"I_BankStatement");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"I_BankStatement");
 
 protected BigDecimal accessLevel = new BigDecimal(2);
 /** AccessLevel
@@ -126,7 +126,7 @@ public void setC_BPartner_ID (int C_BPartner_ID)
 {
 if (C_BPartner_ID <= 0) set_Value ("C_BPartner_ID", null);
  else 
-set_Value ("C_BPartner_ID", new Integer(C_BPartner_ID));
+set_Value ("C_BPartner_ID", Integer.valueOf(C_BPartner_ID));
 }
 /** Get Business Partner .
 @return Identifies a Business Partner */
@@ -142,7 +142,7 @@ public void setC_BankAccount_ID (int C_BankAccount_ID)
 {
 if (C_BankAccount_ID <= 0) set_Value ("C_BankAccount_ID", null);
  else 
-set_Value ("C_BankAccount_ID", new Integer(C_BankAccount_ID));
+set_Value ("C_BankAccount_ID", Integer.valueOf(C_BankAccount_ID));
 }
 /** Get Bank Account.
 @return Account at the Bank */
@@ -158,7 +158,7 @@ public void setC_BankStatementLine_ID (int C_BankStatementLine_ID)
 {
 if (C_BankStatementLine_ID <= 0) set_Value ("C_BankStatementLine_ID", null);
  else 
-set_Value ("C_BankStatementLine_ID", new Integer(C_BankStatementLine_ID));
+set_Value ("C_BankStatementLine_ID", Integer.valueOf(C_BankStatementLine_ID));
 }
 /** Get Bank statement line.
 @return Line on a statement from this Bank */
@@ -174,7 +174,7 @@ public void setC_BankStatement_ID (int C_BankStatement_ID)
 {
 if (C_BankStatement_ID <= 0) set_Value ("C_BankStatement_ID", null);
  else 
-set_Value ("C_BankStatement_ID", new Integer(C_BankStatement_ID));
+set_Value ("C_BankStatement_ID", Integer.valueOf(C_BankStatement_ID));
 }
 /** Get Bank Statement.
 @return Bank Statement of account */
@@ -190,7 +190,7 @@ public void setC_Charge_ID (int C_Charge_ID)
 {
 if (C_Charge_ID <= 0) set_Value ("C_Charge_ID", null);
  else 
-set_Value ("C_Charge_ID", new Integer(C_Charge_ID));
+set_Value ("C_Charge_ID", Integer.valueOf(C_Charge_ID));
 }
 /** Get Charge.
 @return Additional document charges */
@@ -206,7 +206,7 @@ public void setC_Currency_ID (int C_Currency_ID)
 {
 if (C_Currency_ID <= 0) set_Value ("C_Currency_ID", null);
  else 
-set_Value ("C_Currency_ID", new Integer(C_Currency_ID));
+set_Value ("C_Currency_ID", Integer.valueOf(C_Currency_ID));
 }
 /** Get Currency.
 @return The Currency for this record */
@@ -222,7 +222,7 @@ public void setC_Invoice_ID (int C_Invoice_ID)
 {
 if (C_Invoice_ID <= 0) set_Value ("C_Invoice_ID", null);
  else 
-set_Value ("C_Invoice_ID", new Integer(C_Invoice_ID));
+set_Value ("C_Invoice_ID", Integer.valueOf(C_Invoice_ID));
 }
 /** Get Invoice.
 @return Invoice Identifier */
@@ -238,7 +238,7 @@ public void setC_Payment_ID (int C_Payment_ID)
 {
 if (C_Payment_ID <= 0) set_Value ("C_Payment_ID", null);
  else 
-set_Value ("C_Payment_ID", new Integer(C_Payment_ID));
+set_Value ("C_Payment_ID", Integer.valueOf(C_Payment_ID));
 }
 /** Get Payment.
 @return Payment identifier */
@@ -550,7 +550,7 @@ return (String)get_Value("ISO_Code");
 public void setI_BankStatement_ID (int I_BankStatement_ID)
 {
 if (I_BankStatement_ID < 1) throw new IllegalArgumentException ("I_BankStatement_ID is mandatory.");
-set_ValueNoCheck ("I_BankStatement_ID", new Integer(I_BankStatement_ID));
+set_ValueNoCheck ("I_BankStatement_ID", Integer.valueOf(I_BankStatement_ID));
 }
 /** Get Import Bank Statement.
 @return Import of the Bank Statement */
@@ -581,7 +581,7 @@ return (String)get_Value("I_ErrorMsg");
 @param I_IsImported Has this import been processed */
 public void setI_IsImported (boolean I_IsImported)
 {
-set_Value ("I_IsImported", new Boolean(I_IsImported));
+set_Value ("I_IsImported", Boolean.valueOf(I_IsImported));
 }
 /** Get Imported.
 @return Has this import been processed */
@@ -630,7 +630,7 @@ return (String)get_Value("InvoiceDocumentNo");
 @param IsReversal This is a reversing transaction */
 public void setIsReversal (boolean IsReversal)
 {
-set_Value ("IsReversal", new Boolean(IsReversal));
+set_Value ("IsReversal", Boolean.valueOf(IsReversal));
 }
 /** Get Reversal.
 @return This is a reversing transaction */
@@ -648,7 +648,7 @@ return false;
 @param Line Unique line for this document */
 public void setLine (int Line)
 {
-set_Value ("Line", new Integer(Line));
+set_Value ("Line", Integer.valueOf(Line));
 }
 /** Get Line No.
 @return Unique line for this document */
@@ -747,7 +747,7 @@ return (String)get_Value("PaymentDocumentNo");
 @param Processed The document has been processed */
 public void setProcessed (boolean Processed)
 {
-set_Value ("Processed", new Boolean(Processed));
+set_Value ("Processed", Boolean.valueOf(Processed));
 }
 /** Get Processed.
 @return The document has been processed */
@@ -765,7 +765,7 @@ return false;
 @param Processing Process Now */
 public void setProcessing (boolean Processing)
 {
-set_Value ("Processing", new Boolean(Processing));
+set_Value ("Processing", Boolean.valueOf(Processing));
 }
 /** Get Process Now.
 @return Process Now */
