@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for PA_SLA_Goal
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_PA_SLA_Goal extends PO
 {
 /** Standard Constructor
@@ -59,12 +59,12 @@ public X_PA_SLA_Goal (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=745 */
-public static final int Table_ID=745;
+public static final int Table_ID=MTable.getTable_ID("PA_SLA_Goal");
 
 /** TableName=PA_SLA_Goal */
 public static final String Table_Name="PA_SLA_Goal";
 
-protected static KeyNamePair Model = new KeyNamePair(745,"PA_SLA_Goal");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"PA_SLA_Goal");
 
 protected BigDecimal accessLevel = new BigDecimal(3);
 /** AccessLevel
@@ -96,7 +96,7 @@ return sb.toString();
 public void setC_BPartner_ID (int C_BPartner_ID)
 {
 if (C_BPartner_ID < 1) throw new IllegalArgumentException ("C_BPartner_ID is mandatory.");
-set_ValueNoCheck ("C_BPartner_ID", new Integer(C_BPartner_ID));
+set_ValueNoCheck ("C_BPartner_ID", Integer.valueOf(C_BPartner_ID));
 }
 /** Get Business Partner .
 @return Identifies a Business Partner */
@@ -211,7 +211,7 @@ return new KeyNamePair(get_ID(), getName());
 public void setPA_SLA_Criteria_ID (int PA_SLA_Criteria_ID)
 {
 if (PA_SLA_Criteria_ID < 1) throw new IllegalArgumentException ("PA_SLA_Criteria_ID is mandatory.");
-set_Value ("PA_SLA_Criteria_ID", new Integer(PA_SLA_Criteria_ID));
+set_Value ("PA_SLA_Criteria_ID", Integer.valueOf(PA_SLA_Criteria_ID));
 }
 /** Get SLA Criteria.
 @return Service Level Agreement Criteria */
@@ -226,7 +226,7 @@ return ii.intValue();
 public void setPA_SLA_Goal_ID (int PA_SLA_Goal_ID)
 {
 if (PA_SLA_Goal_ID < 1) throw new IllegalArgumentException ("PA_SLA_Goal_ID is mandatory.");
-set_ValueNoCheck ("PA_SLA_Goal_ID", new Integer(PA_SLA_Goal_ID));
+set_ValueNoCheck ("PA_SLA_Goal_ID", Integer.valueOf(PA_SLA_Goal_ID));
 }
 /** Get SLA Goal.
 @return Service Level Agreement Goal */
@@ -240,7 +240,7 @@ return ii.intValue();
 @param Processed The document has been processed */
 public void setProcessed (boolean Processed)
 {
-set_Value ("Processed", new Boolean(Processed));
+set_Value ("Processed", Boolean.valueOf(Processed));
 }
 /** Get Processed.
 @return The document has been processed */
@@ -258,7 +258,7 @@ return false;
 @param Processing Process Now */
 public void setProcessing (boolean Processing)
 {
-set_Value ("Processing", new Boolean(Processing));
+set_Value ("Processing", Boolean.valueOf(Processing));
 }
 /** Get Process Now.
 @return Process Now */
