@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for S_ResourceAssignment
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_S_ResourceAssignment extends PO
 {
 /** Standard Constructor
@@ -57,12 +57,12 @@ public X_S_ResourceAssignment (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=485 */
-public static final int Table_ID=485;
+public static final int Table_ID=MTable.getTable_ID("S_ResourceAssignment");
 
 /** TableName=S_ResourceAssignment */
 public static final String Table_Name="S_ResourceAssignment";
 
-protected static KeyNamePair Model = new KeyNamePair(485,"S_ResourceAssignment");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"S_ResourceAssignment");
 
 protected BigDecimal accessLevel = new BigDecimal(1);
 /** AccessLevel
@@ -135,7 +135,7 @@ return (String)get_Value("Description");
 @param IsConfirmed Assignment is confirmed */
 public void setIsConfirmed (boolean IsConfirmed)
 {
-set_ValueNoCheck ("IsConfirmed", new Boolean(IsConfirmed));
+set_ValueNoCheck ("IsConfirmed", Boolean.valueOf(IsConfirmed));
 }
 /** Get Confirmed.
 @return Assignment is confirmed */
@@ -186,7 +186,7 @@ return bd;
 public void setS_ResourceAssignment_ID (int S_ResourceAssignment_ID)
 {
 if (S_ResourceAssignment_ID < 1) throw new IllegalArgumentException ("S_ResourceAssignment_ID is mandatory.");
-set_ValueNoCheck ("S_ResourceAssignment_ID", new Integer(S_ResourceAssignment_ID));
+set_ValueNoCheck ("S_ResourceAssignment_ID", Integer.valueOf(S_ResourceAssignment_ID));
 }
 /** Get Resource Assignment.
 @return Resource Assignment */
@@ -201,7 +201,7 @@ return ii.intValue();
 public void setS_Resource_ID (int S_Resource_ID)
 {
 if (S_Resource_ID < 1) throw new IllegalArgumentException ("S_Resource_ID is mandatory.");
-set_ValueNoCheck ("S_Resource_ID", new Integer(S_Resource_ID));
+set_ValueNoCheck ("S_Resource_ID", Integer.valueOf(S_Resource_ID));
 }
 /** Get Resource.
 @return Resource */
