@@ -1,5 +1,5 @@
 /******************************************************************************
- * Product: Compiere ERP & CRM Smart Business Solution                        *
+ * Product: Adempiere ERP & CRM Smart Business Solution                        *
  * Copyright (C) 1999-2006 ComPiere, Inc. All Rights Reserved.                *
  * This program is free software;
  you can redistribute it and/or modify it    *
@@ -26,7 +26,7 @@ import java.math.*;
 import org.compiere.util.*;
 /** Generated Model for S_TimeExpenseLine
  *  @author Jorg Janke (generated) 
- *  @version Release 2.6.0a - $Id$ */
+ *  @version Release 3.1.3 - $Id$ */
 public class X_S_TimeExpenseLine extends PO
 {
 /** Standard Constructor
@@ -60,12 +60,12 @@ public X_S_TimeExpenseLine (Properties ctx, ResultSet rs, String trxName)
 super (ctx, rs, trxName);
 }
 /** AD_Table_ID=488 */
-public static final int Table_ID=488;
+public static final int Table_ID=MTable.getTable_ID("S_TimeExpenseLine");
 
 /** TableName=S_TimeExpenseLine */
 public static final String Table_Name="S_TimeExpenseLine";
 
-protected static KeyNamePair Model = new KeyNamePair(488,"S_TimeExpenseLine");
+protected static KeyNamePair Model = new KeyNamePair(Table_ID,"S_TimeExpenseLine");
 
 protected BigDecimal accessLevel = new BigDecimal(1);
 /** AccessLevel
@@ -98,7 +98,7 @@ public void setC_Activity_ID (int C_Activity_ID)
 {
 if (C_Activity_ID <= 0) set_Value ("C_Activity_ID", null);
  else 
-set_Value ("C_Activity_ID", new Integer(C_Activity_ID));
+set_Value ("C_Activity_ID", Integer.valueOf(C_Activity_ID));
 }
 /** Get Activity.
 @return Business Activity */
@@ -114,7 +114,7 @@ public void setC_BPartner_ID (int C_BPartner_ID)
 {
 if (C_BPartner_ID <= 0) set_Value ("C_BPartner_ID", null);
  else 
-set_Value ("C_BPartner_ID", new Integer(C_BPartner_ID));
+set_Value ("C_BPartner_ID", Integer.valueOf(C_BPartner_ID));
 }
 /** Get Business Partner .
 @return Identifies a Business Partner */
@@ -130,7 +130,7 @@ public void setC_Campaign_ID (int C_Campaign_ID)
 {
 if (C_Campaign_ID <= 0) set_Value ("C_Campaign_ID", null);
  else 
-set_Value ("C_Campaign_ID", new Integer(C_Campaign_ID));
+set_Value ("C_Campaign_ID", Integer.valueOf(C_Campaign_ID));
 }
 /** Get Campaign.
 @return Marketing Campaign */
@@ -146,7 +146,7 @@ public void setC_Currency_ID (int C_Currency_ID)
 {
 if (C_Currency_ID <= 0) set_Value ("C_Currency_ID", null);
  else 
-set_Value ("C_Currency_ID", new Integer(C_Currency_ID));
+set_Value ("C_Currency_ID", Integer.valueOf(C_Currency_ID));
 }
 /** Get Currency.
 @return The Currency for this record */
@@ -162,7 +162,7 @@ public void setC_InvoiceLine_ID (int C_InvoiceLine_ID)
 {
 if (C_InvoiceLine_ID <= 0) set_ValueNoCheck ("C_InvoiceLine_ID", null);
  else 
-set_ValueNoCheck ("C_InvoiceLine_ID", new Integer(C_InvoiceLine_ID));
+set_ValueNoCheck ("C_InvoiceLine_ID", Integer.valueOf(C_InvoiceLine_ID));
 }
 /** Get Invoice Line.
 @return Invoice Detail Line */
@@ -178,7 +178,7 @@ public void setC_OrderLine_ID (int C_OrderLine_ID)
 {
 if (C_OrderLine_ID <= 0) set_ValueNoCheck ("C_OrderLine_ID", null);
  else 
-set_ValueNoCheck ("C_OrderLine_ID", new Integer(C_OrderLine_ID));
+set_ValueNoCheck ("C_OrderLine_ID", Integer.valueOf(C_OrderLine_ID));
 }
 /** Get Sales Order Line.
 @return Sales Order Line */
@@ -194,7 +194,7 @@ public void setC_ProjectPhase_ID (int C_ProjectPhase_ID)
 {
 if (C_ProjectPhase_ID <= 0) set_Value ("C_ProjectPhase_ID", null);
  else 
-set_Value ("C_ProjectPhase_ID", new Integer(C_ProjectPhase_ID));
+set_Value ("C_ProjectPhase_ID", Integer.valueOf(C_ProjectPhase_ID));
 }
 /** Get Project Phase.
 @return Phase of a Project */
@@ -210,7 +210,7 @@ public void setC_ProjectTask_ID (int C_ProjectTask_ID)
 {
 if (C_ProjectTask_ID <= 0) set_Value ("C_ProjectTask_ID", null);
  else 
-set_Value ("C_ProjectTask_ID", new Integer(C_ProjectTask_ID));
+set_Value ("C_ProjectTask_ID", Integer.valueOf(C_ProjectTask_ID));
 }
 /** Get Project Task.
 @return Actual Project Task in a Phase */
@@ -226,7 +226,7 @@ public void setC_Project_ID (int C_Project_ID)
 {
 if (C_Project_ID <= 0) set_Value ("C_Project_ID", null);
  else 
-set_Value ("C_Project_ID", new Integer(C_Project_ID));
+set_Value ("C_Project_ID", Integer.valueOf(C_Project_ID));
 }
 /** Get Project.
 @return Financial Project */
@@ -242,7 +242,7 @@ public void setC_UOM_ID (int C_UOM_ID)
 {
 if (C_UOM_ID <= 0) set_Value ("C_UOM_ID", null);
  else 
-set_Value ("C_UOM_ID", new Integer(C_UOM_ID));
+set_Value ("C_UOM_ID", Integer.valueOf(C_UOM_ID));
 }
 /** Get UOM.
 @return Unit of Measure */
@@ -328,7 +328,7 @@ return bd;
 @param IsInvoiced Is this invoiced? */
 public void setIsInvoiced (boolean IsInvoiced)
 {
-set_Value ("IsInvoiced", new Boolean(IsInvoiced));
+set_Value ("IsInvoiced", Boolean.valueOf(IsInvoiced));
 }
 /** Get Invoiced.
 @return Is this invoiced? */
@@ -346,7 +346,7 @@ return false;
 @param IsTimeReport Line is a time report only (no expense) */
 public void setIsTimeReport (boolean IsTimeReport)
 {
-set_Value ("IsTimeReport", new Boolean(IsTimeReport));
+set_Value ("IsTimeReport", Boolean.valueOf(IsTimeReport));
 }
 /** Get Time Report.
 @return Line is a time report only (no expense) */
@@ -364,7 +364,7 @@ return false;
 @param Line Unique line for this document */
 public void setLine (int Line)
 {
-set_Value ("Line", new Integer(Line));
+set_Value ("Line", Integer.valueOf(Line));
 }
 /** Get Line No.
 @return Unique line for this document */
@@ -386,7 +386,7 @@ public void setM_Product_ID (int M_Product_ID)
 {
 if (M_Product_ID <= 0) set_Value ("M_Product_ID", null);
  else 
-set_Value ("M_Product_ID", new Integer(M_Product_ID));
+set_Value ("M_Product_ID", Integer.valueOf(M_Product_ID));
 }
 /** Get Product.
 @return Product, Service, Item */
@@ -445,7 +445,7 @@ return bd;
 @param Processed The document has been processed */
 public void setProcessed (boolean Processed)
 {
-set_Value ("Processed", new Boolean(Processed));
+set_Value ("Processed", Boolean.valueOf(Processed));
 }
 /** Get Processed.
 @return The document has been processed */
@@ -507,7 +507,7 @@ public void setS_ResourceAssignment_ID (int S_ResourceAssignment_ID)
 {
 if (S_ResourceAssignment_ID <= 0) set_Value ("S_ResourceAssignment_ID", null);
  else 
-set_Value ("S_ResourceAssignment_ID", new Integer(S_ResourceAssignment_ID));
+set_Value ("S_ResourceAssignment_ID", Integer.valueOf(S_ResourceAssignment_ID));
 }
 /** Get Resource Assignment.
 @return Resource Assignment */
@@ -522,7 +522,7 @@ return ii.intValue();
 public void setS_TimeExpenseLine_ID (int S_TimeExpenseLine_ID)
 {
 if (S_TimeExpenseLine_ID < 1) throw new IllegalArgumentException ("S_TimeExpenseLine_ID is mandatory.");
-set_ValueNoCheck ("S_TimeExpenseLine_ID", new Integer(S_TimeExpenseLine_ID));
+set_ValueNoCheck ("S_TimeExpenseLine_ID", Integer.valueOf(S_TimeExpenseLine_ID));
 }
 /** Get Expense Line.
 @return Time and Expense Report Line */
@@ -537,7 +537,7 @@ return ii.intValue();
 public void setS_TimeExpense_ID (int S_TimeExpense_ID)
 {
 if (S_TimeExpense_ID < 1) throw new IllegalArgumentException ("S_TimeExpense_ID is mandatory.");
-set_ValueNoCheck ("S_TimeExpense_ID", new Integer(S_TimeExpense_ID));
+set_ValueNoCheck ("S_TimeExpense_ID", Integer.valueOf(S_TimeExpense_ID));
 }
 /** Get Expense Report.
 @return Time and Expense Report */
@@ -553,7 +553,7 @@ public void setS_TimeType_ID (int S_TimeType_ID)
 {
 if (S_TimeType_ID <= 0) set_Value ("S_TimeType_ID", null);
  else 
-set_Value ("S_TimeType_ID", new Integer(S_TimeType_ID));
+set_Value ("S_TimeType_ID", Integer.valueOf(S_TimeType_ID));
 }
 /** Get Time Type.
 @return Type of time recorded */
